added scrolling functioanlity to new-tweet box

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,9 @@
 header.top {
+  position: relative;
   width: 100%;
   background-color: #fbf3d8;
   height: 400px;
   background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
   text-align: center;
+  z-index: 2;
 }
