--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,7 +4,7 @@ nav {
   background-color: #4056A1;
   width: 100%;
   height: 120px;
-  z-index: 1;
+  z-index: 2;
   padding: 1.5em;
   
 }
@@ -35,9 +35,10 @@ div.click-tweet button {
 
 
 div.click-tweet i {
-  color: #FFFF;
+  color: #FFF;
 }
 
 div.click-tweet button:hover i{
   color:blue
 }
+
