--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,8 @@
 nav {
   position: fixed;
   color: #FFFF;
-  background-color: #4056A1;
+  background-color: #fbf3d8;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
   width: 100%;
   height: 120px;
   z-index: 3;
